--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bdd-typescript-test",
   "version": "1.0.0",
-  "description": "",
+  "description": "A BDD POC that defines in a simple way a business rules implementation.",
   "main": "index.js",
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.json",
